# ipdr-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-cloud.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
app/: streamlit_app.py
docs/: ARCHITECTURE.md  INTERVIEW.md
eval/: golden_queries.yaml  run_eval.py
scripts/: generate_data.py  index_qdrant.py
src/ipdr_agent/: __init__.py  config.py  embeddings.py  engine.py  narrative.py  router.py  schema.py  viz.py
src/ipdr_agent/llm/: __init__.py  base.py  openai_provider.py
src/ipdr_agent/sql/: __init__.py  examples.py  generator.py  guardrails.py
src/ipdr_agent/vector/: __init__.py  base.py  memory_store.py  qdrant_store.py
tests/: conftest.py  test_engine.py  test_guardrails.py  test_router.py  test_schema.py
